# air_arm

./: LAUNCH.txt  bash_history
src/: README.md  qb_hand_tubitak_demo.py
src/air_arm_ads/: CMakeLists.txt  package.xml  setup.py
src/air_arm_ads/action/: ArmAdsAction.action
src/air_arm_ads/scripts/: air_ads_node (copy).py  air_ads_node.py
src/air_arm_hardware_interface/: CMakeLists.txt  package.xml
src/air_arm_hardware_interface/config/: hardware.yaml
src/air_arm_hardware_interface/include/air_arm_hardware_interface/: air_arm_hw.h  air_arm_hw_interface.h
src/air_arm_hardware_interface/launch/: air_arm_position_trajectory_controllers.launch
src/air_arm_hardware_interface/src/: air_arm_hardware_interface_node.cpp  air_arm_hw.cpp
src/air_arm_robot/: CMakeLists.txt  cmake2meson.py  package.xml
src/air_arm_robot/include/air_arm_robot/: arm.h  arm_ik.h
src/air_arm_robot/src/: arm.cpp  arm_ik.cpp
src/air_object_segmentation/: CMakeLists.txt  package.xml
src/air_object_segmentation/launch/: air_object_segmentation.launch
src/air_object_segmentation/scripts/: pcl_helper.py  segmentation.py
src/air_object_segmentation/src/: cloud_transformer.cpp
src/air_object_segmentation/srv/: PcTransform.srv
src/air_qr_moveit_demo/: CMakeLists.txt  package.xml
src/air_qr_moveit_demo/rviz/: qr_demo.rviz
src/air_qr_moveit_demo/src/: air_pc_moveit_demo.cpp  air_qr_moveit_demo.cpp  air_qr_moveit_demo_with_grasp_posture.cpp
src/air_wrist_ros/: CMakeLists.txt  package.xml
src/air_wrist_ros/config/: joint_names_air_wrist_ros.yaml
src/air_wrist_ros/launch/: display.launch  gazebo.launch
src/air_wrist_ros/meshes/: base_link.STL  base_x.STL  base_y.STL  roll_cardan.STL  top_pitch.STL  top_x.STL  top_y.STL
src/air_wrist_ros/urdf/: aaair_wrist_ros.urdf  air_wrist_ros.csv  air_wrist_ros.gazebo.xacro  air_wrist_ros.urdf.xacro  air_wrist_ros_org.urdf
src/air_wrist_ros_config/: .setup_assistant  CMakeLists.txt  package.xml
src/air_wrist_ros_config/config/: air_wrist_ros.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/air_wrist_ros_config/launch/: air_wrist_ros_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  demo.launch  (+20 more)
src/arm_config/: .setup_assistant  package.xml
src/charuco/: CMakeLists.txt  package.xml
src/ik_vision/: CMakeLists.txt  Wrist_InverseKinematics.xls  package.xml
src/moveit_tutorials/: CMakeLists.txt
src/moveit_tutorials/doc/move_group_interface/: CMakeLists.txt  moveit_goal.drawio  moveit_move.drawio
src/moveit_tutorials/doc/move_group_interface/include/move_group_interface/: move_group_interface_tutorial.h
src/moveit_tutorials/doc/move_group_interface/src/: move_group_interface_tutorial.cpp
src/results/: output_1.yaml  output_2.yaml  output_3.yaml
src/ros_ads/: pos_shoulder_ros_ads.py  ros_ads.py  vel_arm_ros_ads.py  vel_shoulder_ros_ads.py  wrist_read_roll_pitch_joint_states.csv  wrist_read_roll_pitch_joint_states.py  wrist_ros_ads.py
(+87 files in other folders)
